test/library/packages/Sort/errors/errors-comparator.keyandcompare.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: The key method cannot be provided in a comparator that provides a compare method
